@@ -1,3 +1,8 @@
+  17 Jul 2013; Michael Weber <xmw@gentoo.org>
+  raspberrypi-userland-bin-0_p20130711.ebuild,
+  raspberrypi-userland-bin-1_pre20130715.ebuild:
+  Fix install paths
+
   17 Jul 2013; Michael Weber <xmw@gentoo.org> files/04raspberrypi-userland-bin:
   Fix envd file
 
